--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.34.0",
+    "@tiptap/extension-bubble-menu": "^2.0.0-beta.55",
+    "@tiptap/react": "^2.0.0-beta.108",
+    "@tiptap/starter-kit": "^2.0.0-beta.183",
+    "lodash.debounce": "^4.0.8",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
