--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tiptap/starter-kit": "^2.0.0-beta.183",
     "lodash.debounce": "^4.0.8",
     "next": "12.1.5",
+    "path-to-regexp": "^6.2.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hot-toast": "^2.2.0",
