--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^0.1.6",
     "@supabase/supabase-js": "^1.34.0",
     "@tiptap/extension-bubble-menu": "^2.0.0-beta.55",
     "@tiptap/react": "^2.0.0-beta.108",
